@@ -1,3 +1,6 @@
+2019-05-28  Kirit Saelensminde  <kirit@felspar.com>
+ Add methods for fetching out string version and JSON version of mime bodies.
+
 2018-08-31  Kirit Saelensminde  <kirit@felspar.com>
  Allow setting a URL fragment from a jcursor.
 
